# cambricon_mlu

./: .gitignore  CMakeLists copy.txt  CMakeLists.txt  Readme.md  batch_inference.cpp  config.hpp  get_models.cpp  lib_ar.sh  libai_core.cpp  libai_core.hpp  run_mlu220.sh  run_mlu270.sh  test_case_img_list.cpp  test_case_vid_new.cpp  test_fight.cpp  test_fight_cascade.cpp  test_general_multithread.cpp  test_one_new.cpp  test_thread.cpp  unitest.cpp  unitest_mempool.cpp
inner_utils/: inner_basic.cpp  inner_basic.hpp  ip_iqa_blur.cpp  ip_iqa_blur.hpp  ip_iqa_pose.cpp  ip_iqa_pose.hpp  module.cpp  module.hpp  postprocessor.cpp  postprocessor.hpp
main_backup/: extraction_test.cpp  test_detection_with_track.cpp  test_factory.cpp  test_factory_batch.cpp  test_factory_face_recognition.cpp  test_gkpw.cpp  test_skeleton_detection.cpp  test_yolo.cpp  tvai_common.h  unitest.cpp  unitest_unet_post.cpp
utils/: basic.cpp  basic.hpp  cluster.cpp  cluster.hpp  framework_detection.cpp  framework_detection.hpp  module_action_tsn_classify.cpp  module_action_tsn_classify.hpp  module_base.cpp  module_base.hpp  module_binary_classification.cpp  module_binary_classification.hpp  module_cascade_detection.cpp  module_cascade_detection.hpp  module_face_feature_extraction.cpp  module_face_feature_extraction.hpp  module_falling_detection.cpp  module_falling_detection.hpp  module_general_inference.cpp  module_general_inference.hpp  module_headpose.cpp  module_headpose.hpp  module_iqa.cpp  module_iqa.hpp  module_mod_traditional.cpp  module_mod_traditional.hpp  module_mod_unet2dshift.cpp  module_mod_unet2dshift.hpp  module_obj_feature_extraction.cpp  module_obj_feature_extraction.hpp  module_phoning_detection.cpp  module_phoning_detection.hpp  module_pspnet_water_segmentation.cpp  module_pspnet_water_segmentation.hpp  module_retinaface_detection.cpp  module_retinaface_detection.hpp  module_skeleton_detection.cpp  module_skeleton_detection.hpp  module_smoking_detection.cpp  module_smoking_detection.hpp  (+13 more)
utils/json_encoder/: ucloud_json_format.hpp
utils/post_rule/: post_rule_hover.cpp  post_rule_hover.hpp
utils/trackor/bytetrack_no_reid/: BYTETracker_no_reid.cpp  BYTETracker_no_reid.h  STrack_no_reid.cpp  STrack_no_reid.h  dataType_no_reid.h  kalmanFilter_no_reid.cpp  kalmanFilter_no_reid.h  lapjv_no_reid.cpp  lapjv_no_reid.h  utils_no_reid.cpp
utils/trackor/bytetrack_origin/: BYTETracker_origin.cpp  BYTETracker_origin.h  STrack_origin.cpp  STrack_origin.h  dataType_origin.h  kalmanFilter_origin.cpp  kalmanFilter_origin.h  lapjv_origin.cpp  lapjv_origin.h  utils_origin.cpp
